Update to latest NovaCore